Validations Joi Patients and Appointments

--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,5 +1,5 @@
 #Docker de Posgres y Pgadmin
-#Para instanciar los contenedores desde un coumetno .yml se debe escribir el siguiente comando:
+#Para instanciar los contenedores desde un documento .yml se debe escribir el siguiente comando:
 # docker compose up -d
 
 version: '3.5'
